<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaLogin"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/logounesc"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edittextMatricula"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/hintMatricula"
                android:drawableStart="@drawable/usericoncircle"
                android:drawablePadding="12dp"
                android:paddingStart="12dp"
                android:inputType="number"
                android:paddingLeft="12dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edittextSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintSenha"
                android:inputType="textPassword"
                android:drawableStart="@drawable/iconpassword"
                android:drawablePadding="12dp"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnEntrar"
            android:background="@drawable/custom_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/btnEntrar"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnCadastrar"
            android:background="@drawable/custom_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/btnCadastrar"
            android:textColor="@color/white"/>
    </LinearLayout>

</ScrollView>