<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaHome"
    android:orientation="vertical">

    <!-- Layout do Top -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:orientation="vertical"
        android:background="@drawable/custom_top_home">

        <!--- Logo e Menu -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/logounesc"/>

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/menu"
                android:layout_marginLeft="260dp"
                android:layout_marginTop="40dp"/>
        </LinearLayout>

        <!-- Nome -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvOla"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/HelloHome"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNome"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle=""
                android:textColor="@color/HelloHome"/>
        </LinearLayout>

        <!-- Mensagem de Boas Vindas -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvBoasVindas"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

    <!---Inicio dos Menus de cima -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <!--- Primeiro Menu-->
        <LinearLayout
            android:id="@+id/MinhasAulas"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/aulas"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imgMinhasAultas"
                android:textColor="@color/VerdeForteUNESC"
                android:textAlignment="center"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <!--- Segundo Menu-->
        <LinearLayout
            android:id="@+id/Provas"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginLeft="25dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/provas"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imgProvas"
                android:textColor="@color/VerdeForteUNESC"
                android:textAlignment="center"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
    </LinearLayout>

    <!---Inicio dos Menus de baixo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <!--- Primeiro Menu-->
        <LinearLayout
            android:id="@+id/Atividades"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:src="@drawable/avaliacao"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imgAtividades"
                android:textColor="@color/VerdeForteUNESC"
                android:textAlignment="center"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <!--- Segundo Menu-->
        <LinearLayout
            android:id="@+id/Eventos"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_marginLeft="25dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:src="@drawable/outro"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imgEventos"
                android:textColor="@color/VerdeForteUNESC"
                android:textAlignment="center"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>